ked 페이지 변경(레이아웃 구성 전)

--- a/src/main/resources/static/include/ked_navbar.html
+++ b/src/main/resources/static/include/ked_navbar.html
@@ -53,7 +53,7 @@
     <!-- Navbar Start -->
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand bg-primary navbar-dark sticky-top px-4 py-0 w-100 shadow">
-        <img src="../asset/images/s-images/ked.png" style="width: 15rem;">
+        <!--<img src="../asset/images/s-images/ked.png" style="width: 15rem;">-->
         <div class="navbar-nav align-items-center ms-auto">
             <div class="col-1 w-auto m-auto text-center text-dark" id="clock">
                 <p class="m-4 fs-5">{{date}} {{time}}</p>
