--- a/src/main/resources/templates/info_bat.html
+++ b/src/main/resources/templates/info_bat.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>BSB 통합관제시스템</title>
+    <title>KED 안전관리플랫폼</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
