--- a/src/main/resources/templates/monitor.html
+++ b/src/main/resources/templates/monitor.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>BSB 통합관제시스템</title>
+    <title>KED 안전관리플랫폼</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -63,7 +63,7 @@
                 <div class="bg-primary rounded p-4">
                     <div class="text-start">
                         <h4 class="d-inline-grid text-body">사용 후 배터리 분류 프로세스</h4>
-                        <img class="d-inline-grid ms-4 img-process" src="../asset/images/s-images/process.png">
+                        <img class="d-inline-grid ms-4 img-process" src="../asset/images/s-images/ked_process.png">
                     </div>
                     <!--<h4 class="d-inline-grid text-secondary w-100">사용 후 배터리 분류 프로세스</h4>-->
                 </div>
