--- a/src/main/resources/templates/ess.html
+++ b/src/main/resources/templates/ess.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="ko">
-
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <META HTTP-EQUIV="refresh" CONTENT="60">
+    <!--<META HTTP-EQUIV="refresh" CONTENT="60">-->
     <title>KED 안전관리플랫폼</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
@@ -46,15 +45,14 @@
 
     <div id="sidebar"></div>
     <!-- Content Start -->
-    <div id="content" class="content">
+    <div class="content">
         <div id="navbar"></div>
-        <div class="map_wrap w-100" style="height: 94%">
-            <div id="map" class="h-100 position-relative overflow-hidden"></div>
-        </div>
-
+        <div class="bg-primary"></div>
     </div>
     <!-- Content End -->
 
+    <!-- Back to Top -->
+    <!--    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>-->
 </div>
 
 <!-- JavaScript Libraries -->
@@ -71,45 +69,6 @@
 <script src="../js/include.js"></script>
 <!-- Clock -->
 <script src="../js/clock.js"></script>
-<!-- Map -->
-<!--<script src="../js/map.js"></script>-->
-<script th:inline="javascript">
-
-    var lat = [[${testm.lat}]]; lng = [[${testm.lng}]]
-    /*var lat = [[${test[0].lat}]]; lng = [[${test[0].lng}]];*/
-
-    var mapContainer = document.getElementById('map'), // 지도를 표시할 div
-        mapOption = {
-            center: new kakao.maps.LatLng(lat, lng), // 지도의 중심좌표
-            level: 12 // 지도의 확대 레벨
-        };
-
-    var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
-
-    var imageSrc1 = '../asset/images/s-images/marker.png', // 마커이미지의 주소입니다
-        imageSize1 = new kakao.maps.Size(45, 45), // 마커이미지의 크기입니다
-        imageOption1 = {offset: new kakao.maps.Point(20, 40)}; // 마커이미지의 옵션입니다. 마커의 좌표와 일치시킬 이미지 안에서의 좌표를 설정합니다.
-
-    // 마커의 이미지정보를 가지고 있는 마커이미지를 생성합니다
-    var markerImage1 = new kakao.maps.MarkerImage(imageSrc1, imageSize1, imageOption1),
-        markerPosition1 = new kakao.maps.LatLng(lat, lng); // 마커가 표시될 위치입니다
-
-    // 마커를 생성합니다
-    var marker1 = new kakao.maps.Marker({
-        position: markerPosition1,
-        image: markerImage1, // 마커이미지 설정
-        clickable: true
-    });
-
-    // 마커가 지도 위에 표시되도록 설정합니다
-    marker1.setMap(map);
-
-    kakao.maps.event.addListener(marker1, 'click', function() {
-        location.href="info";
-    });
-
-</script>
-
 </body>
 
 </html>
