--- a/src/main/resources/templates/transport.html
+++ b/src/main/resources/templates/transport.html
@@ -2,8 +2,8 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <META HTTP-EQUIV="refresh" CONTENT="60">
-    <title>BSB 통합관제시스템</title>
+    <!--<META HTTP-EQUIV="refresh" CONTENT="60">-->
+    <title>KED 안전관리플랫폼</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -55,7 +55,7 @@
             <div id="menu_wrap">
                 <div class="bg-primary mb-4 p-4 w-100 rounded mt-2">
                     <div class="rounded text-start pb-4">
-                        <p class="d-inline-grid fs-5 fw-bold w-100 text-body">배터리 정보</p>
+                        <p class="d-inline-grid fs-5 fw-bold w-100 text-body">보관함 배터리 정보</p>
                     </div>
                     <table id="table-btr" class="info-table">
                         <thead>
@@ -85,7 +85,7 @@
                 </div>
                 <div class="bg-primary p-4 w-50 rounded d-inline-grid">
                     <div class="rounded text-start pb-4">
-                        <p class="d-inline-grid fs-5 fw-bold w-100 text-body">BSB 실내 환경 정보</p>
+                        <p class="d-inline-grid fs-5 fw-bold w-100 text-body">보관함 실내 환경 정보</p>
                     </div>
                     <table class="info-table">
                         <tbody>
@@ -132,7 +132,7 @@
                 </div>
                 <div class="bg-primary mt-4 p-4 w-100 rounded">
                     <div class="rounded text-start pb-4">
-                        <p class="d-inline-grid fs-5 fw-bold w-100 text-body">BSB 안전 상태</p>
+                        <p class="d-inline-grid fs-5 fw-bold w-100 text-body">배터리 안전 상태</p>
                         <i id="safety-line" class="position-absolute fs-6 bi bi-question-circle">
                             <div>
                                 <img src="../asset/images/s-images/status_line.png" style="width: 80%;margin-left: 20%;">
@@ -210,8 +210,8 @@
 
     var mapContainer = document.getElementById('map'), // 지도를 표시할 div
         mapOption = {
-            center: new kakao.maps.LatLng(lat, lng-0.003636), // 지도의 중심좌표
-            level: 3 // 지도의 확대 레벨
+            center: new kakao.maps.LatLng(lat, lng-1.803636), // 지도의 중심좌표
+            level: 12 // 지도의 확대 레벨
         };
 
     var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
@@ -232,8 +232,39 @@
     });
 
     // 마커가 지도 위에 표시되도록 설정합니다
-
     marker1.setMap(map);
+
+    kakao.maps.event.addListener(marker1, 'click', function() {
+        var lat = [[${testm.lat}]]; lng = [[${testm.lng}]];
+        /*var lat = [[${test[12].lat}]]; lng = [[${test[12].lng}]];*/
+
+        var mapContainer = document.getElementById('map'), // 지도를 표시할 div
+            mapOption = {
+                center: new kakao.maps.LatLng(lat, lng-0.003636), // 지도의 중심좌표
+                level: 3 // 지도의 확대 레벨
+            };
+
+        var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
+
+        var imageSrc1 = '../asset/images/s-images/marker.png', // 마커이미지의 주소입니다
+            imageSize1 = new kakao.maps.Size(45, 45), // 마커이미지의 크기입니다
+            imageOption1 = {offset: new kakao.maps.Point(20, 40)}; // 마커이미지의 옵션입니다. 마커의 좌표와 일치시킬 이미지 안에서의 좌표를 설정합니다.
+
+        // 마커의 이미지정보를 가지고 있는 마커이미지를 생성합니다
+        var markerImage1 = new kakao.maps.MarkerImage(imageSrc1, imageSize1, imageOption1),
+            markerPosition1 = new kakao.maps.LatLng(lat, lng); // 마커가 표시될 위치입니다
+
+        // 마커를 생성합니다
+        var marker1 = new kakao.maps.Marker({
+            position: markerPosition1,
+            image: markerImage1, // 마커이미지 설정
+            clickable: true
+        });
+
+        // 마커가 지도 위에 표시되도록 설정합니다
+        marker1.setMap(map);
+    });
+
 </script>
 <!-- Weather -->
 <!--<script src="../js/weather.js"></script>-->
@@ -263,7 +294,6 @@
         $('.CurrHumi').empty()
 
     }
-
     $(document).ready(weather());
 </script>
 <!-- Data -->
