--- a/src/main/resources/static/theme/css/style.css
+++ b/src/main/resources/static/theme/css/style.css
@@ -731,6 +731,19 @@ body::-webkit-scrollbar{display: none;}
     padding-right: 1.5rem;
 }
 
+.container,
+.container-fluid,
+.container-sm,
+.container-md,
+.container-lg,
+.container-xl {
+  width: 100%;
+  padding-right: 0.75rem;
+  padding-left: 0.75rem;
+  margin-right: auto;
+  margin-left: auto;
+}
+
 .row-cols-1 > * {
   flex: 0 0 100%;
   max-width: 100%;
@@ -903,8 +916,7 @@ body::-webkit-scrollbar{display: none;}
 
 .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col,
 .col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm,
-.col-sm-auto, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md,
-.col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg,
+.col-sm-auto, .col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg,
 .col-lg-auto, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl,
 .col-xl-auto {
   position: relative;
@@ -923,4 +935,250 @@ body::-webkit-scrollbar{display: none;}
     flex-basis: 0;
     flex-grow: 1;
     max-height: 100%;
+}
+
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid #e3e6f0;
+    border-radius: 0.35rem;
+}
+  
+.card > hr {
+margin-right: 0;
+margin-left: 0;
+}
+
+.card > .list-group {
+border-top: inherit;
+border-bottom: inherit;
+}
+
+.card > .list-group:first-child {
+border-top-width: 0;
+border-top-left-radius: calc(0.35rem - 1px);
+border-top-right-radius: calc(0.35rem - 1px);
+}
+
+.card > .list-group:last-child {
+border-bottom-width: 0;
+border-bottom-right-radius: calc(0.35rem - 1px);
+border-bottom-left-radius: calc(0.35rem - 1px);
+}
+
+.card > .card-header + .list-group,
+.card > .list-group + .card-footer {
+border-top: 0;
+}
+
+.card-body {
+flex: 1 1 auto;
+min-height: 1px;
+padding: 1.25rem;
+}
+
+.card-title {
+margin-bottom: 0.75rem;
+}
+
+.card-subtitle {
+margin-top: -0.375rem;
+margin-bottom: 0;
+}
+
+.card-text:last-child {
+margin-bottom: 0;
+}
+
+.card-link:hover {
+text-decoration: none;
+}
+
+.card-link + .card-link {
+margin-left: 1.25rem;
+}
+
+.card-header {
+padding: 0.75rem 1.25rem;
+margin-bottom: 0;
+background-color: #f8f9fc;
+border-bottom: 1px solid #e3e6f0;
+}
+
+.card-header:first-child {
+border-radius: calc(0.35rem - 1px) calc(0.35rem - 1px) 0 0;
+}
+
+.card-footer {
+padding: 0.75rem 1.25rem;
+background-color: #f8f9fc;
+border-top: 1px solid #e3e6f0;
+}
+
+.card-footer:last-child {
+border-radius: 0 0 calc(0.35rem - 1px) calc(0.35rem - 1px);
+}
+
+.card-header-tabs {
+margin-right: -0.625rem;
+margin-bottom: -0.75rem;
+margin-left: -0.625rem;
+border-bottom: 0;
+}
+
+.card-header-pills {
+margin-right: -0.625rem;
+margin-left: -0.625rem;
+}
+
+.card-img-overlay {
+position: absolute;
+top: 0;
+right: 0;
+bottom: 0;
+left: 0;
+padding: 1.25rem;
+border-radius: calc(0.35rem - 1px);
+}
+
+.card-img,
+.card-img-top,
+.card-img-bottom {
+flex-shrink: 0;
+width: 100%;
+}
+
+.card-img,
+.card-img-top {
+border-top-left-radius: calc(0.35rem - 1px);
+border-top-right-radius: calc(0.35rem - 1px);
+}
+
+.card-img,
+.card-img-bottom {
+border-bottom-right-radius: calc(0.35rem - 1px);
+border-bottom-left-radius: calc(0.35rem - 1px);
+}
+
+.card-deck .card {
+margin-bottom: 0.75rem;
+}
+
+@media (min-width: 576px) {
+.card-deck {
+    display: flex;
+    flex-flow: row wrap;
+    margin-right: -0.75rem;
+    margin-left: -0.75rem;
+}
+.card-deck .card {
+    flex: 1 0 0%;
+    margin-right: 0.75rem;
+    margin-bottom: 0;
+    margin-left: 0.75rem;
+}
+}
+
+.card-group > .card {
+margin-bottom: 0.75rem;
+}
+
+@media (min-width: 576px) {
+.card-group {
+    display: flex;
+    flex-flow: row wrap;
+}
+.card-group > .card {
+    flex: 1 0 0%;
+    margin-bottom: 0;
+}
+.card-group > .card + .card {
+    margin-left: 0;
+    border-left: 0;
+}
+.card-group > .card:not(:last-child) {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+.card-group > .card:not(:last-child) .card-img-top,
+.card-group > .card:not(:last-child) .card-header {
+    border-top-right-radius: 0;
+}
+.card-group > .card:not(:last-child) .card-img-bottom,
+.card-group > .card:not(:last-child) .card-footer {
+    border-bottom-right-radius: 0;
+}
+.card-group > .card:not(:first-child) {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+.card-group > .card:not(:first-child) .card-img-top,
+.card-group > .card:not(:first-child) .card-header {
+    border-top-left-radius: 0;
+}
+.card-group > .card:not(:first-child) .card-img-bottom,
+.card-group > .card:not(:first-child) .card-footer {
+    border-bottom-left-radius: 0;
+}
+}
+
+.card-columns .card {
+margin-bottom: 0.75rem;
+}
+
+@media (min-width: 576px) {
+.card-columns {
+    -moz-column-count: 3;
+    column-count: 3;
+    -moz-column-gap: 1.25rem;
+    column-gap: 1.25rem;
+    orphans: 1;
+    widows: 1;
+}
+.card-columns .card {
+    display: inline-block;
+    width: 100%;
+}
+}
+
+.accordion {
+overflow-anchor: none;
+}
+
+.accordion > .card {
+overflow: hidden;
+}
+
+.accordion > .card:not(:last-of-type) {
+border-bottom: 0;
+border-bottom-right-radius: 0;
+border-bottom-left-radius: 0;
+}
+
+.accordion > .card:not(:first-of-type) {
+border-top-left-radius: 0;
+border-top-right-radius: 0;
+}
+
+.accordion > .card > .card-header {
+border-radius: 0;
+margin-bottom: -1px;
+}
+
+.text-left {
+    text-align: left !important;
+}
+  
+.text-right {
+text-align: right !important;
+}
+
+footer.sticky-footer .copyright {
+    line-height: 1;
+    font-size: 0.8rem;
 }
