--- a/src/main/resources/templates/ess.html
+++ b/src/main/resources/templates/ess.html
@@ -47,12 +47,151 @@
     <!-- Content Start -->
     <div class="content">
         <div id="navbar"></div>
-        <div class="bg-primary"></div>
-    </div>
-    <!-- Content End -->
 
-    <!-- Back to Top -->
-    <!--    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>-->
+        <!-- Content Wrapper -->
+        <div id="content-wrapper" class="d-flex flex-column">
+
+            <!-- Main Content -->
+            <div id="content">
+                <!-- End of Topbar -->
+
+                <!-- Begin Page Content -->
+                <div class="container mt-4 px-5">
+                    <div class="row">
+                        <div class="col-5">
+                            <div class="card">
+                                <h6 class="m-3 font-weight-bold text-black-50">내부 환경 정보</h6>
+                                <div class="card-body">
+                                    <div class="row justify-content-center">
+                                        <div class="col-md-3">
+                                            <div class="row text-center">
+                                                <i class="bi bi-thermometer-half fs-3"></i>
+                                            </div>
+                                            <div class="row justify-content-center">좋음</div>
+                                            <div class="row justify-content-center">15.86℃</div>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <div class="row text-center">
+                                                <i class="bi bi-droplet-half fs-3"></i>
+                                            </div>
+                                            <div class="row justify-content-center">좋음</div>
+                                            <div class="row justify-content-center">43.71%</div>
+                                        </div>
+                                        <div>
+                                            <table class="table text-center mt-3">
+                                                <thead>
+                                                <tr>
+                                                    <th scope="col"></th>
+                                                    <th scope="col">온도</th>
+                                                    <th scope="col">습도</th>
+                                                </tr>
+                                                </thead>
+                                                <tbody>
+                                                <tr>
+                                                    <th scope="row"><div class="rounded" style="width: 20px; height: 20px; background-color: red;"></div></th>
+                                                    <td>60℃ 이상</td>
+                                                    <td>60％ 이상</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row"><div class="rounded" style="width: 20px; height: 20px; background-color: darkorange;"></div></th>
+                                                    <td>48℃이상 60℃ 미만</td>
+                                                    <td>48％이상 60％ 미만</td>
+                                                </tr>
+                                                <tr>
+                                                    <th scope="row"><div class="rounded" style="width: 20px; height: 20px; background-color: mediumseagreen;"></div></th>
+                                                    <td>48℃ 미만</td>
+                                                    <td>48％ 미만</td>
+                                                </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-7 ps-5">
+                            <div class="card">
+                                <h6 class="m-3 font-weight-bold text-black-50">ESS SAFETY STATUS</h6>
+                                <div class="card-body text-center">
+                                    <img src="../asset/images/s-images/sms.png" style="width: 356px;" class="mb-3">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col-5">
+                            <div class="card">
+                                <h6 class="m-3 font-weight-bold text-black-50">유해가스</h6>
+                                <div class="card-body">
+                                    <table class="table text-center fs-6 mt-2 mb-3">
+                                        <tbody>
+                                        <tr>
+                                            <th scope="row">VOC</th>
+                                            <td><p>43.0</p></td>
+                                            <td><p>ppm</p></td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">NH3</th>
+                                            <td><p>2.35</p></td>
+                                            <td><p>ppm</p></td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">CO2</th>
+                                            <td><p>13.0</p></td>
+                                            <td><p>ppm</p></td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">CO</th>
+                                            <td><p>125.72</p></td>
+                                            <td><p>ppm</p></td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-7 ps-5">
+                            <div class="card">
+                                <h6 class="m-3 font-weight-bold text-black-50">BATTERY STATUS</h6>
+                                <div class="card-body">
+                                    <div class="card-body">
+                                        <table class="table text-center fs-6 align-middle">
+                                            <tbody>
+                                            <tr>
+                                                <th scope="row"><img style="width: 40px;" src="../asset/images/s-images/volt_icon.png"><p>전압</p></th>
+                                                <td><span>43.33 (V)</span></td>
+                                                <th scope="row"><img style="width: 40px;" src="../asset/images/s-images/ampere_icon.png"><p>전류</p></th>
+                                                <td><p>2.35</p></td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row"><img style="width: 40px;" src="../asset/images/s-images/charge_icon.png"><p>충전량</p></th>
+                                                <td><p>13.0</p></td>
+                                                <th scope="row"><img style="width: 40px;" src="../asset/images/s-images/discharge_icon.png"><p>방전량</p></th>
+                                                <td><p>13.0</p></td>
+                                            </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+</div>
+<!-- /.container-fluid -->
+</div>
+<!-- End of Main Content -->
+</div>
+</div>
+<!-- Content End -->
+
+<!-- Back to Top -->
+<!--    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>-->
 </div>
 
 <!-- JavaScript Libraries -->
@@ -65,10 +204,23 @@
 <script src="../theme/lib/tempusdominus/js/moment.min.js"></script>
 <script src="../theme/lib/tempusdominus/js/moment-timezone.min.js"></script>
 <script src="../theme/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+<!-- min -->
+<!-- Bootstrap core JavaScript-->
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+<!-- Core plugin JavaScript-->
+<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+<!-- Custom scripts for all pages-->
+<script src="js/sb-admin-2.min.js"></script>
+
 <!-- Include -->
 <script src="../js/include.js"></script>
 <!-- Clock -->
 <script src="../js/clock.js"></script>
+<script src="../js/scripts.js"></script>
+
 </body>
 
 </html>
